syntax = "proto3";

package image;

service ImageClassify {
    rpc ClassifyImage (ImageClassifierRequest) returns (ImageClassifierReply);
}

message ImageClassifierRequest {
    bytes image = 1;
}

message ImageClassifierReply {
    int64 state = 1;
    int64 class_index = 2;
}